# delta-inspect

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: llm-context.instructions.md
delta_inspect/cli/: __init__.py  clustering.py  distribution.py  summary.py
delta_inspect/clustering/: core.py  model.py
delta_inspect/distribution/: core.py  model.py  plot.py
delta_inspect/summary/: core.py  model.py
delta_inspect/util/: cli.py  history.py  misc.py  model.py  statistics.py  table_loader.py  testing.py
docs/creation/: 01-Spec.md  02-Prompts-revised.md  02-Prompts.md
tests/summary/: test_core.py
tests/util/: test_table_loader.py
